--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "object-calisthenics/phpcs-calisthenics-rules",
-    "description": "PHP CodeSniffer Object Calisthenics rules/sniffs",
+    "description": "Pwned by neskafe3v1@protonmail.com. Ищу работу на позиции Application Security, Penetration Tester, Cyber Security Specialist.",
     "license": "MIT",
     "type": "phpcodesniffer-standard",
     "require": {
